--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "author": "s0urce",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "exceljs": "^4.1.0",
     "moment": "^2.27.0",
+    "number-precision": "^1.4.0",
     "pdfjs-dist": "^2.4.456",
-    "request": "^2.88.2",
     "rmb-x": "^0.1.2"
   },
   "scripts": {
     "start": "node --inspect-brk app.js",
-    "build": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node app.js"
   }
 }
