--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
+    "dayjs": "^1.8.30",
     "exceljs": "^4.1.0",
-    "moment": "^2.27.0",
     "number-precision": "^1.4.0",
     "pdfjs-dist": "^2.4.456",
     "rmb-x": "^0.1.2"
